# Douro-boardgame

./: .gitignore  LICENSE  README.md  definitions.py  demo.py  example_solution.py  pyproject.toml  solution.py  test.py  utils.py  your_solution.py
.trash/: cases.py
cases/: name-Rubens_schwierigkeit-extremschwer_size-7_pins-15_kanten-29_version-1_case.json  schwierigkeit-extremschwer_size-10_pins-12_kanten-29_name-unnamed_version-1_case.json  schwierigkeit-extremschwer_size-10_pins-12_kanten-30_name-unnamed_version-1_case.json  schwierigkeit-extremschwer_size-10_pins-12_kanten-33_name-unnamed_version-1_case.json  schwierigkeit-leicht_size-10_pins-6_kanten-24_name-unnamed_version-1_case.json  schwierigkeit-leicht_size-10_pins-6_kanten-25_name-unnamed_version-1_case.json  schwierigkeit-mittel_size-10_pins-7_kanten-22_name-unnamed_version-1_case.json  schwierigkeit-mittel_size-10_pins-7_kanten-24_name-unnamed_version-1_case.json  schwierigkeit-mittel_size-10_pins-7_kanten-25_name-unnamed_version-1_case.json  schwierigkeit-schwer_size-10_pins-8_kanten-28_name-unnamed_version-1_case.json  schwierigkeit-schwer_size-10_pins-8_kanten-31_name-unnamed_version-1_case.json  schwierigkeit-sehrleicht_size-10_pins-4_kanten-13_name-unnamed_version-1_case.json  schwierigkeit-sehrleicht_size-10_pins-5_kanten-25_version-2_name-unnamed_case.json  schwierigkeit-sehrschwer_size-10_pins-9_kanten-27_name-unnamed_version-1_case.json  schwierigkeit-sehrschwer_size-10_pins-9_kanten-29_name-unnamed_version-1_case.json  (+1 more)
test_cases/: answers.txt  auto_detect_pins.m  cases.py  importboard.m  (+1 more)
(+181 files in other folders)
